Update API to scrape profile professions instead of character professions
